--- a/api/.env
+++ b/api/.env
@@ -9,3 +9,9 @@ DB_NAME=RickyMorty
 PORT=3001
 
 
+DATABASE_URL=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
+PGDATABASE=railway
+PGHOST=containers-us-west-57.railway.app
+PGPASSWORD=RwkpGP1ZOOCIAF0wR3Ke
+PGPORT=5661
+PGUSER=postgres
