--- a/api/.env
+++ b/api/.env
@@ -2,16 +2,31 @@ https://rickandmortyapi.com/api/episode
 
 https://rickandmortyapi.com/api/character
 
+# DB_USER=postgres
+# DB_PASSWORD=postgres
+# DB_HOST=localhost:5432
+# DB_NAME=RickyMorty
+# PORT=3001
+
+
 DB_USER=postgres
-DB_PASSWORD=postgres
-DB_HOST=localhost:5432
-DB_NAME=RickyMorty
-PORT=3001
+DB_PASSWORD=RwkpGP1ZOOCIAF0wR3Ke
+DB_HOST=rick-y-morty-railway-production.up.railway.app
+DB_NAME=railway
+PORT=5661
+
+# DATABASE_URL=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
+# PGDATABASE=railway
 
 
-DATABASE_URL=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
-PGDATABASE=railway
-PGHOST=containers-us-west-57.railway.app
-PGPASSWORD=RwkpGP1ZOOCIAF0wR3Ke
-PGPORT=5661
-PGUSER=postgres
+
+# DB_USER= db_rickymorty_user
+
+# DB_PASSWORD= db_rickymorty_user
+# DB_HOST= dpg-cc7msi1gp3jpiju2p3jg-a
+# DB_NAME= db_rickymorty
+# PORT= 5432
+
+
+# postgres://db_rickymorty_user:MeamTF7FBsb9gv4UwFeDaGTQ7OJ1UERl@dpg-cc7msi1gp3jpiju2p3jg-a.oregon-postgres.render.com/db_rickymorty
+
