--- a/api/.env
+++ b/api/.env
@@ -2,31 +2,32 @@ https://rickandmortyapi.com/api/episode
 
 https://rickandmortyapi.com/api/character
 
-# DB_USER=postgres
-# DB_PASSWORD=postgres
-# DB_HOST=localhost:5432
-# DB_NAME=RickyMorty
-# PORT=3001
-
-
 DB_USER=postgres
-DB_PASSWORD=RwkpGP1ZOOCIAF0wR3Ke
-DB_HOST=rick-y-morty-railway-production.up.railway.app
-DB_NAME=railway
-PORT=5661
+DB_PASSWORD=postgres
+DB_HOST=localhost:5432
+DB_NAME=RickyMorty
+PORT=3001
 
-# DATABASE_URL=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
-# PGDATABASE=railway
+# DB_USER=tomas_user
+# DB_PASSWORD=iG4aF2SDepJ2kfWYdjuZDPf1LtHPKlsM
+# DB_HOST=dpg-cc7o0qcgqg47o8j2grg0-a.oregon-postgres.render.com
+# DB_NAME=tomas
+# PORT=5432
+
+# Port=5432
+
+# Database=tomas
+
+# Username=tomas_user
+
+# Hostname=dpg-cc7o0qcgqg47o8j2grg0-a
+
+# password=iG4aF2SDepJ2kfWYdjuZDPf1LtHPKlsM
 
 
 
-# DB_USER= db_rickymorty_user
+# InternalDatabaseURL=postgres://tomas_user:iG4aF2SDepJ2kfWYdjuZDPf1LtHPKlsM@dpg-cc7o0qcgqg47o8j2grg0-a/tomas
 
-# DB_PASSWORD= db_rickymorty_user
-# DB_HOST= dpg-cc7msi1gp3jpiju2p3jg-a
-# DB_NAME= db_rickymorty
-# PORT= 5432
+# ExternalDatabaseURL=postgres://tomas_user:iG4aF2SDepJ2kfWYdjuZDPf1LtHPKlsM@dpg-cc7o0qcgqg47o8j2grg0-a.oregon-postgres.render.com/tomas
 
-
-# postgres://db_rickymorty_user:MeamTF7FBsb9gv4UwFeDaGTQ7OJ1UERl@dpg-cc7msi1gp3jpiju2p3jg-a.oregon-postgres.render.com/db_rickymorty
-
+# PSQLCommand=PGPASSWORD=iG4aF2SDepJ2kfWYdjuZDPf1LtHPKlsM psql -h dpg-cc7o0qcgqg47o8j2grg0-a.oregon-postgres.render.com -U tomas_user tomas
