--- a/api/.env
+++ b/api/.env
@@ -7,10 +7,11 @@ DB_PASSWORD=postgres
 DB_HOST=localhost:5432
 DB_NAME=RickyMorty
 PORT=3001
+HOST = 0.0.0.0
 
 # DB_USER=tomas_user
 # DB_PASSWORD=iG4aF2SDepJ2kfWYdjuZDPf1LtHPKlsM
-# DB_HOST=dpg-cc7o0qcgqg47o8j2grg0-a.oregon-postgres.render.com
+# # DB_HOST=dpg-cc7o0qcgqg47o8j2grg0-a
 # DB_NAME=tomas
 # PORT=5432
 
