--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "desarrollo": "nodemon index.js",
     "start": "node index.js"
