--- a/api/package.json
+++ b/api/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines": {
-    "node": "16.x"
-  },
   "scripts": {
     "desarrollo": "nodemon index.js",
     "start": "node index.js"
@@ -24,6 +21,7 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.3",
-    "vercel": "^28.2.0"
+    "vercel": "^28.2.0",
+    "yarn": "^1.22.19"
   }
 }
