--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "desarrollo": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "CI=true react-scripts build"
   },
   "keywords": [],
   "author": "",
