--- a/api/package.json
+++ b/api/package.json
@@ -21,8 +21,6 @@
     "nodemon": "^2.0.19",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.21.3",
-    "vercel": "^28.2.0",
-    "yarn": "^1.22.19"
+    "sequelize": "^6.21.3"
   }
 }
