--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "desarrollo": "nodemon index.js",
-    "start": "node index.js",
-    "build": "CI=true node index.js build"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
