--- a/api/.env
+++ b/api/.env
@@ -1,18 +1,18 @@
-https://rickandmortyapi.com/api/episode
-https://rickandmortyapi.com/api/location
-https://rickandmortyapi.com/api/character
+# https://rickandmortyapi.com/api/episode
+# https://rickandmortyapi.com/api/location
+# https://rickandmortyapi.com/api/character
 
-# DB_USER=postgres
-# DB_PASSWORD=postgres
-# DB_HOST=localhost:5432
-# DB_NAME=RickyMorty
-# PORT=3001
-# HOST = 0.0.0.0
-
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=localhost:5432
+DB_NAME=RickyMorty
+PORT=3000
 HOST = 0.0.0.0
-DATABASE_URL=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
-PGDATABASE=railway
-PGHOST=containers-us-west-71.railway.app
-PGPASSWORD=JENDygXSFINeITGQWSGc
-PGPORT=6031
-PGUSER=postgres
+
+# HOST = 0.0.0.0
+# DATABASE_URL=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
+# PGDATABASE=railway
+# PGHOST=containers-us-west-71.railway.app
+# PGPASSWORD=JENDygXSFINeITGQWSGc
+# PGPORT=6031
+# PGUSER=postgres
