--- a/api/package.json
+++ b/api/package.json
@@ -12,8 +12,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": ">=12.18.3",
-    "npm": ">=6.14.6"
+    "node": "16.x"
   },
   "dependencies": {
     "axios": "^0.27.2",
